--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kint-js",
-  "version": "1.5.0",
-  "description": "This is kint-js framework",
+  "version": "1.6.6",
+  "description": "The nodejs web framework is designed to be \"zero dependency\" making it faster and easier to use.",
   "main": "app.js",
   "scripts": {
     "test": "node app",
@@ -12,12 +12,10 @@
   },
   "keywords": [
     "kint-js",
-    "kint-js-framework"
+    "kint-js-framework",
+    "nodejs-web-framework",
+    "indonesia"
   ],
   "author": "kintaro azura chaniago",
-  "license": "ISC",
-  "dependencies": {
-    "formidable": "^2.1.1",
-    "node-session": "^1.2.1"
-  }
+  "license": "ISC"
 }
